# foodData-ingredients-csv

./: .gitignore  README.md  main.py  pyproject.toml
rawData/: all_downloaded_table_record_counts.csv
