[tool.poetry]
name = "fooddatacentral"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
boto3 = "^1.28.52"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
